--- a/front/static/css/index.css
+++ b/front/static/css/index.css
@@ -1,18 +1,8 @@
-.navbar {
-
-    #nav-logo {
-        margin: 10px 10px 10px 0;
-    }
-
-    .nav-item{
-        margin: 0 10px;
-    }
-}
-
 .home-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 100px;
 
     .intro {
         margin: 20px 0;
@@ -46,32 +36,6 @@
             img {
                 max-height: 200px;
             }
-        }
-    }
-}
-
-.footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    margin: 60px 0 0 0;
-    padding: 10px 0;
-    width: 100%;
-    background-color: rgba(43, 48, 53);
-
-    .footer-text {
-        color: white;
-        font-size: 15px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    /* phones */
-    .navbar {
-        .navbar-brand {
-            font-size: 16px;
-            margin: 0;
         }
     }
 }
