--- a/front/templates/common/navbar.html
+++ b/front/templates/common/navbar.html
@@ -3,19 +3,28 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
         <img src="{% static 'img/olympic_rings_logo.png' %}" alt="Logo" height="40" id="nav-logo">
-        <a class="navbar-brand" href="#">Jeux Olympiques 2024</a>
+        <a class="navbar-brand" href="/">Jeux Olympiques 2024</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                <a class="nav-link {% if request.get_full_path == '/' %}active{% endif %}" aria-current="page" href="/">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Billets</a>
             </li>
-        </ul>
+            {% if not user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link {% if request.get_full_path == '/subscribe' %}active{% endif %}" href="/subscribe">Inscription / Connexion</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Se déconnecter</a>
+                </li>
+            {% endif %}
+        </ul>  
         </div>
     </div>
 </nav>
