--- a/front/templates/subscribe.html
+++ b/front/templates/subscribe.html
@@ -1,7 +1,7 @@
 {% extends "common/base.html" %}
 {% load static %}
 
-{% block title %}Page d'accueil{% endblock title %}
+{% block title %}Inscription / Connexion{% endblock title %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/subscribe.css' %}">
@@ -91,7 +91,7 @@
                     <div class="d-grid gap-2 col-6 mx-auto mt-5">
                         <button type="submit" class="btn btn-primary">Connexion</button>
                     </div>
-                  </form>
+                </form>
             </div>
         </div>
     </div>
