--- a/back/templates/back/common/navbar.html
+++ b/back/templates/back/common/navbar.html
@@ -9,7 +9,10 @@
         <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="#">Offres</a>
+                <a class="nav-link {% if request.get_full_path == '/back-office/' %}active{% endif %}" href="/back-office/">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if request.get_full_path == '/back-office/offers' %}active{% endif %}" href="/back-office/offers">Offres</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Ventes</a>
