--- a/front/templates/common/navbar.html
+++ b/front/templates/common/navbar.html
@@ -13,7 +13,7 @@
                 <a class="nav-link {% if request.get_full_path == '/' %}active{% endif %}" aria-current="page" href="/">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Billets</a>
+                <a class="nav-link {% if request.get_full_path == '/offers' %}active{% endif %}" href="/offers">Billets</a>
             </li>
             {% if not user.is_authenticated %}
                 <li class="nav-item">
