--- a/front/static/css/common.css
+++ b/front/static/css/common.css
@@ -12,6 +12,20 @@ html {
     .nav-item{
         margin: 0 10px;
     }
+
+    .nav-cart {
+        text-decoration: none;
+        color: white;
+        background-color: #515151;
+        padding: 8px;
+        border-radius: 10px;
+        transition: background-color .2s;
+        position: relative;
+
+        &:hover {
+            background-color: #636363;
+        }
+    }
 }
 
 .footer {
@@ -33,12 +47,34 @@ html {
     }
 }
 
+.qty-circle {
+    position: absolute;
+    padding: 0 8px;
+    background-color: rgb(195, 57, 57);
+    border-radius: 50%;
+    top: -5px;
+    left: -5px;
+}
+
 @media only screen and (max-width: 767px) {
-    /* phones */
+    
     .navbar {
         .navbar-brand {
             font-size: 16px;
             margin: 0;
+        }
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    
+    .navbar {
+        #navbarText {
+            padding-bottom: 10px;
+        }
+
+        .nav-cart {
+            margin: 0 0 0 5px;
         }
     }
 }
