--- a/back/templates/back/offers.html
+++ b/back/templates/back/offers.html
@@ -1,7 +1,7 @@
 {% extends "back/common/base.html" %}
 {% load static %}
 
-{% block title %}Back Office{% endblock title %}
+{% block title %}Back Office - Offres{% endblock title %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/back-offers.css' %}">
