--- a/front/templates/subscribe.html
+++ b/front/templates/subscribe.html
@@ -38,7 +38,7 @@
                             {% endif %}
                     
                             {% for error in field.errors %}
-                            <div class="text-dange">
+                            <div class="text-danger">
                                 {{ error }}
                             </div>
                             {% endfor %}
