--- a/back/templates/back/back-office.html
+++ b/back/templates/back/back-office.html
@@ -9,8 +9,10 @@
 
 {% block body %}
 
+<div class="background" style="background-image: url({% static 'img/back_jo_background.jpg' %})"></div>
+
 <div class="container mt-5">
-    <h2>Vous êtes sur le back office</h2>
+    <h1>Vous êtes sur le back office</h2>
 </div>
 
 {% endblock body %}
