--- a/front/templates/order-confirm.html
+++ b/front/templates/order-confirm.html
@@ -36,11 +36,12 @@
 
     <div>
         Merci pour votre achat !
-        Vous pouvez dès à présent télécharger vos billets au format PDF.
-        Ces billets seront à présenter le jour de votre venue aux Jeux Olympiques, conservez les précieusement.
+        Vous pouvez dès à présent consulter et télécharger vos billets au format PDF.
+        Ces billets seront à présenter le jour de votre venue aux Jeux Olympiques.
+        Vous pouvez également retrouver vos billets sur la page <a href="/account">mon compte</a>.
     </div>
     <div class="download-box mt-4">
-        <a href="/generate-ticket/{{ order.id }}/" target="_blank" class="download-link">Télécharger mes billets</a>
+        <a href="/generate-ticket/{{ order.id }}/" target="_blank" class="download-link">Consulter mes billets</a>
     </div>
 
 </div>
