--- a/front/templates/common/navbar.html
+++ b/front/templates/common/navbar.html
@@ -8,7 +8,7 @@
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-4 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
                 <a class="nav-link {% if request.get_full_path == '/' %}active{% endif %}" aria-current="page" href="/">Accueil</a>
             </li>
@@ -25,6 +25,12 @@
                 </li>
             {% endif %}
         </ul>  
+        {% if user.is_authenticated %}
+            <a href="/account" class="nav-account">
+                <img src="{% static 'img/manage_accounts.svg' %}" alt="Compte" id="account-icon">
+                Mon compte
+            </a>
+        {% endif %}
         <a href="/cart" class="nav-cart">
             <div class="qty-circle">{% if request.session.cart %}1{% endif %}</div>
             <img src="{% static 'img/shopping_cart.svg' %}" alt="Panier" id="cart-icon">
