--- a/front/templates/payment.html
+++ b/front/templates/payment.html
@@ -34,53 +34,25 @@
 
     <div class="spacer"></div>
 
-    <h2>Paiement</h2>
-
-    <form action="/payment" method="POST" class="row g-3">
+    <form action="{% url 'create_checkout_session' %}" method="POST" class="row g-3">
 
       {% csrf_token %}
 
-      <h4>Informations de paiement</h4>
-      {% for field in payment_form %}
-          
-        <div class="{% if field.html_name == 'code' %}col-12{% else %}col-md-3{% endif %}"> 
-              
-          <label for="{{ field.id_for_label }}" class="form-label">
-          {{ field.label }} {% if field.field.required %}<span class="required">*</span>{% endif %}
-          </label>
-  
-          {{ field }}
-  
-          {% if field.help_text %}
-          <div class="form-text">
-              {{ field.help_text }}
-          </div>
-          {% endif %}
-  
-          {% for error in field.errors %}
-          <div class="text-danger">
-              {{ error }}
-          </div>
-          {% endfor %}
-        
-        </div>
-      {% endfor %}
-
-        <div class="col-12 mt-5">
+        <div class="col-12">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="condition-check" name="condition-check" required>
                 <label class="form-check-label" for="condition-check">
-                    En validant ce paiement, je confirme avoir lu et accepté les <a href="#" data-bs-toggle="modal" data-bs-target="#cgvModal">CGV</a> ainsi que la 
+                    Avant de passer au paiement, je confirme avoir lu et accepté les <a href="#" data-bs-toggle="modal" data-bs-target="#cgvModal">CGV</a> ainsi que la 
                     <a href="#" data-bs-toggle="modal" data-bs-target="#confidentialityModal">politique de confidentialité</a> du site. <span class="required">*</span>
                 </label>
             </div>
         </div>
           
         <div class="col-12 d-flex justify-content-end">
-          <button type="submit" class="btn btn-primary px-5 mt-4 payment-submit">Valider le paiement</button>
+          <button type="submit" class="btn btn-primary px-5 mt-4 payment-submit">Passer au paiement</button>
         </div>
 
-      </form>
+    </form>
 
 </div>
 
